--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
-<!--
-	Author: W3layouts
-	Author URL: http://w3layouts.com
-	License: Creative Commons Attribution 3.0 Unported
-	License URL: http://creativecommons.org/licenses/by/3.0/
--->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>tutorials</title>
+<title>TUTORIALS</title>
+<!-- icon -->
+<link rel="icon" type="image" href="/images2/icon.jpg">
+<!-- //icon -->
 <!-- Meta tag Keywords -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -326,15 +323,15 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="hi-icon-wrap hi-icon-effect-9 hi-icon-effect-9a">
 				<a href="#" class="hi-icon"><img src="images/hourglass.png" alt=" " /></a>
 			</div>
-			<h4>Service 4</h4>
-			<p>Lorem Ipsum</p>
+			<h4>Ajoyib muhit</h4>
+			<p>Biz sizga shunday imkoniyatlar yaratamizki, online holatda bo'lsa ham turli xil musobaqalar tashkilllaymiz</p>
 		</div>
 		<div class="col-md-2 services-gd text-center" data-wow-delay=".5s">
 			<div class="hi-icon-wrap hi-icon-effect-9 hi-icon-effect-9a">
 				<a href="#" class="hi-icon"><img src="images/book2.png" alt=" " /></a>
 			</div>
-			<h4>Service 5</h4>
-			<p>Lorem Ipsum</p>
+			<h4>Sovg'alar</h4>
+			<p>Faol bo'lgan ishtirokchilar uchun sovg'alar</p>
 		</div>
 		<div class="clearfix"> </div>
 </div>
@@ -800,7 +797,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3039.987516324107!2d71.77244247443494!3d40.36480115880068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38bb84ba1d76a659%3A0x7bc998c6a195e3d5!2sTatuff!5e0!3m2!1suz!2s!4v1714203731418!5m2!1suz!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 	</div>
 	<div class="contact-agile" id="contact">
-		<h3>Biz bilan<span>Bog'laning</span></h3>
+		<h3>Biz bilan<span> Bog'laning</span></h3>
 			<div class="container">
 						
 				<form action="#" method="post" class="wow fadeInLeft animated" data-wow-delay=".5s">
