--- a/index.html
+++ b/index.html
@@ -196,28 +196,28 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 <div id="about" class="about">
 	<div class="container">
 			<h1>Biz <span>haqimizda</span></h1>
-			<h2>Biz sizga o'zimizning "tutorial for selling projects on websites" nomli online kursimizni o'rganishingizni tavsiya qilamiz</h2>
+			<h2> "O'rganing va loyiha yarating yoki o'z bilimingiz bilan pul ishlang" nomli web saytimiz  </h2>
 			<div class="specialty-grids-top">
 				<div class="col-md-4 service-box" style="visibility: visible; ">
 					<figure class="icon">
 						<span class="glyphicon glyphicon-education a1" aria-hidden="true"></span>
 					</figure>
-					<h5>Kursda nimalarni o'rganasiz</h5>
-					<p>Siz bu kursda loyihalarni sotish mumkin bo'lgan saytlar haqida ma'lumot olishingiz mumkin. Kursimizda 2 xil materiallardan foydalanamiz yozma hamda videodars formatida </p>
+					<h5>Bu saytda nimalarni o'rganasiz</h5>
+					<p>Saytimiz 2 qismdan iborat bo'lib, 1-qism ya'ni asosiy e'tibor tutoriallarga qaratilgan bo'ladi, 2-qism esa o'z portfolioyingizni joylaysiz yoki portfolioyingiz bo'lmasa yaratasiz va bunda biz sizga yordam beramiz </p>
 				</div>
 				<div class="col-md-4 service-box wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; ">
 					<figure class="icon">
 						<span class="glyphicon glyphicon-home a2" aria-hidden="true"></span>
 					</figure>
-					<h5>Videodarslar haqida </h5>
-					<p>Kursimizdagi videodarslarda saytlardan ro'yxatdan o'tish, loyihalarni, kodlarni, videoshablonlarni, ovoz effektlarni, presentatsiyalar shablonlarni va shunga o'xshash loyihalarni sotish va sotib olishni o'rganasiz </p>
+					<h5>Asosiy qism haqida </h5>
+					<p>Web saytimiz barcha IT soha vakillarini qamrab oladi. Dizayner yoki dasturchi hattoki qiziquvchilarni ham. Saytdan ro'yxatdan o'tib imkoniyatlardan foydalanishingiz mumkin. Yaratgan dasturingizni Play market dasturida sotganday sotishingiz mumkin. Boshlang'ich dasturchi bo'lsangiz ham kichik loyihalar orqali daromad topasiz hamda darajangizni oshirib boraverasiz   </p>
 				</div>
 				<div class="col-md-4 service-box wow bounceIn animated" data-wow-delay="0.4s" style="visibility: visible; ">
 					<figure class="icon">
 						 <span class="glyphicon glyphicon-leaf a3" aria-hidden="true"></span>						
 					</figure>
 					<h5>Qo'shimcha yordamlar</h5>
-					<p>Biz sizga qo'shimcha yordam sifatida yozma materiallar ham taqdim qilamiz u yerda qaysi saytlarda sotish mumkin, qaysi saytlarda qimmat sotasiz hamda kommissiya kamroq olinishi haqidagi ma'lumotlarni taqdim qilamiz </p>
+					<p>Biz bir jamoadek bir-birimizga yordam beramiz. Yo'nalishingizga mos holatda maxsus chatlar mavjuid bo'lib, muammolaringizni oson hal etishingiz mumkin. Bu muammolar dastur kodiga bog'liq bo'lsa ham.  </p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -344,7 +344,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="col-md-4 grid slideanim">
 				<figure class="effect-jazz">
 				<a href="#portfolioModal1"  data-toggle="modal">
-					<img src="images2/pr.jpg" alt="img25" class="img-responsive"/>
+					<img src="images2/project.webp" alt="img25" class="img-responsive"/>
 						<figcaption>
 							<h4>Amaliyot</h4>
 							<p>Amaliyot muvaffaqiyat kaliti</p>
@@ -356,7 +356,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<figure class="effect-jazz">
 				<a href="#portfolioModal2"  data-toggle="modal">
 
-					<img src="images2/pr.jpg" alt="img25" class="img-responsive"/>
+					<img src="images2/project2.webp" alt="img25" class="img-responsive"/>
 						<figcaption>
 							<h4>Amaliyot</h4>
                             <p>Amaliyot muvaffaqiyat kaliti</p>						
@@ -367,7 +367,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="col-md-4 grid slideanim">
 				<figure class="effect-jazz">
 				<a href="#portfolioModal3"  data-toggle="modal">
-					<img src="images2/pr.jpg" alt="img25" class="img-responsive"/>
+					<img src="images2/project3.webp" alt="img25" class="img-responsive"/>
 						<figcaption>
 							<h4>Amaliyot</h4>
                             <p>Amaliyot muvaffaqiyat kaliti</p>							
@@ -383,7 +383,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<figure class="effect-jazz">
 				<a href="#portfolioModal4"  data-toggle="modal">
 
-					<img src="images2/pr.jpg" alt="img25" class="img-responsive"/>
+					<img src="images2/project4.webp" alt="img25" class="img-responsive"/>
 						<figcaption>
 							<h4 class="effcet-text">Amaliyot</h4>
                             <p>Amaliyot muvaffaqiyat kaliti</p>							
@@ -395,7 +395,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<figure class="effect-jazz">
 				<a href="#portfolioModal5"  data-toggle="modal">
 
-					<img src="images2/pr.jpg" alt="img25" class="img-responsive"/>
+					<img src="images2/project5.webp" alt="img25" class="img-responsive"/>
 						<figcaption>
 							<h4 class="effcet-text">Amaliyot</h4>
                             <p>Amaliyot muvaffaqiyat kaliti</p>								
@@ -607,7 +607,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="col-md-3 team_gd1 wow zoomIn" data-wow-duration="1.5s" data-wow-delay="0.1s">
 				<div class="team_pos">
 					<div class="team_back"></div>
-					<img class="img-responsive" src="images/t1.png"  alt=" ">
+					<img class="img-responsive" src="images/po'latova.jpg"  alt=" ">
 					<div class="team_info">
 						<a href="#"  class="face_one"><i class=" so1 fa fa-facebook fc1" aria-hidden="true"></i></a>
 						<a href="#"  class="face_one"><i class=" so2 fa fa-twitter fc2" aria-hidden="true"></i></a>
