--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="col-md-4 grid slideanim">
 				<figure class="effect-jazz">
 				<a href="#portfolioModal1"  data-toggle="modal">
-					<img src="images2/project.webp" alt="img25" class="img-responsive"/>
+					<img src="images2/pr.jpg" alt="img25" class="img-responsive"/>
 						<figcaption>
 							<h4>Amaliyot</h4>
 							<p>Amaliyot muvaffaqiyat kaliti</p>
@@ -356,7 +356,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<figure class="effect-jazz">
 				<a href="#portfolioModal2"  data-toggle="modal">
 
-					<img src="images2/project2.webp" alt="img25" class="img-responsive"/>
+					<img src="images2/pr.jpg" alt="img25" class="img-responsive"/>
 						<figcaption>
 							<h4>Amaliyot</h4>
                             <p>Amaliyot muvaffaqiyat kaliti</p>						
@@ -367,7 +367,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="col-md-4 grid slideanim">
 				<figure class="effect-jazz">
 				<a href="#portfolioModal3"  data-toggle="modal">
-					<img src="images2/project3.webp" alt="img25" class="img-responsive"/>
+					<img src="images2/pr.jpg" alt="img25" class="img-responsive"/>
 						<figcaption>
 							<h4>Amaliyot</h4>
                             <p>Amaliyot muvaffaqiyat kaliti</p>							
@@ -383,7 +383,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<figure class="effect-jazz">
 				<a href="#portfolioModal4"  data-toggle="modal">
 
-					<img src="images2/project4.webp" alt="img25" class="img-responsive"/>
+					<img src="images2/pr.jpg" alt="img25" class="img-responsive"/>
 						<figcaption>
 							<h4 class="effcet-text">Amaliyot</h4>
                             <p>Amaliyot muvaffaqiyat kaliti</p>							
@@ -395,7 +395,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 				<figure class="effect-jazz">
 				<a href="#portfolioModal5"  data-toggle="modal">
 
-					<img src="images2/project5.webp" alt="img25" class="img-responsive"/>
+					<img src="images2/pr.jpg" alt="img25" class="img-responsive"/>
 						<figcaption>
 							<h4 class="effcet-text">Amaliyot</h4>
                             <p>Amaliyot muvaffaqiyat kaliti</p>								
@@ -406,7 +406,6 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 			<div class="col-md-3 grid grid-wi slideanim">
 				<figure class="effect-jazz">
 				<a href="#portfolioModal6"  data-toggle="modal">
-
 					<img src="images2/pr.jpg" alt="img25" class="img-responsive"/>
 						<figcaption>
 							<h4 class="effcet-text">Amaliyot</h4>
